Stworzenie klas StatystykiCSV.java oraz Wykresy.java, wykorzystywane do gromadzenia danych i wyswietlania wykresow:
- utworzenie plikow csv dla roznych typow pojazdow, magazynow i punktow dostawy.
- tworzenie na podstawie danych z pliku csv wykresow przedstawiajacych finanse magazynu, finanse punktow dostawy oraz zestawienie sald roznych typow pojazdow.