@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group = 'pl.olehzavalka'
@@ -9,11 +10,25 @@ repositories {
     mavenCentral()
 }
 
+def javafxVersion = '24.0.1'
+
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation 'org.jfree:jfreechart:1.5.4'
+    implementation 'org.jfree:jcommon:1.0.24'
 }
 
 test {
     useJUnitPlatform()
+}
+
+application {
+    mainClass = 'dostawa.WizualizacjaStatystyk' // <-- Twoja klasa z metodą main
+}
+
+run {
+    // Dla JavaFX na Macu - to MUSI być!
+    jvmArgs = [
+            '--module-path', configurations.runtimeClasspath.asPath,
+            '--add-modules', 'javafx.controls,javafx.fxml'
+    ]
 }
